# sentiments

./: .gitignore  README.md  app.py  build_all.sh  build_flask.sh  build_model.sh  build_postgres.sh  docker-compose.yml  forms.py  model.html  pyproject.toml  run_flask.sh  run_model.sh  run_postgres.sh  summarize.py
docker/: build_postgres.sh  contactusMessage  flask.dockerfile  postgres.dockerfile  run_postgres.sh
sentiments/: app.py  forms.py
sentiments/static/: styles.css
sentiments/templates/: contact.html  contacted.html  home.html  layout.html  model.html
static/: styles.css
templates/: about.html  contact.html  home.html  layout.html
